--- a/cycler.html
+++ b/cycler.html
@@ -41,6 +41,8 @@
         style="color:red; background-color: silver;">Get</button>
     <button type="button" class="btn btn-primary" onclick="spin()"
         style="color: green; background-color: silver;">Spin</button>
+        <button type="button" class="btn btn-primary" onclick="swap()"
+        style="color: blue; background-color: silver;">Swap</button>
 </body>
 <script>
     function makeNewDiv() {
